--- a/example/style/common.styl
+++ b/example/style/common.styl
@@ -1,5 +1,4 @@
 @import './variable.styl'
-@import './fork.styl'
 
 *, :after, :before {
   box-sizing border-box
@@ -9,8 +8,10 @@ html {
   background #eee
 }
 body {
+  font-size 14px
   font-family Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,SimSun,sans-serif
 }
+
 a {
   -webkit-text-decoration-skip objects
   color $txt-green
@@ -28,8 +29,6 @@ a {
 ol, ul {
   list-style none
 }
-
-
 
 .fade-enter-active,
 .fade-leave-active {
