--- a/example/scss/markdown.scss
+++ b/example/scss/markdown.scss
@@ -209,10 +209,6 @@ a {
     text-decoration: none
 }
 
-a:hover,a:focus,a:active {
-    text-decoration: underline
-}
-
 hr,.rule {
     height: 0;
     margin: 15px 0;
@@ -244,25 +240,25 @@ label {
     font-weight: bold
 }
 
-input[type="text"],#adv_code_search .search-page-label,input[type="password"],input[type="email"],input[type="number"],input[type="tel"],input[type="url"],textarea {
-    min-height: 34px;
-    padding: 7px 8px;
-    font-size: 13px;
-    color: #333;
-    vertical-align: middle;
-    background-color: #fff;
-    background-repeat: no-repeat;
-    background-position: right center;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    outline: none;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075)
-}
+// input[type="text"],#adv_code_search .search-page-label,input[type="password"],input[type="email"],input[type="number"],input[type="tel"],input[type="url"],textarea {
+//     min-height: 34px;
+//     padding: 7px 8px;
+//     font-size: 13px;
+//     color: #333;
+//     vertical-align: middle;
+//     background-color: #fff;
+//     background-repeat: no-repeat;
+//     background-position: right center;
+//     border: 1px solid #ccc;
+//     border-radius: 3px;
+//     outline: none;
+//     box-shadow: inset 0 1px 2px rgba(0,0,0,0.075)
+// }
 
-input[type="text"].focus,#adv_code_search .focus.search-page-label,input[type="text"]:focus,.focused .drag-and-drop,#adv_code_search .search-page-label:focus,input[type="password"].focus,input[type="password"]:focus,input[type="email"].focus,input[type="email"]:focus,input[type="number"].focus,input[type="number"]:focus,input[type="tel"].focus,input[type="tel"]:focus,input[type="url"].focus,input[type="url"]:focus,textarea.focus,textarea:focus {
-    border-color: #51a7e8;
-    box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5)
-}
+// input[type="text"].focus,#adv_code_search .focus.search-page-label,input[type="text"]:focus,.focused .drag-and-drop,#adv_code_search .search-page-label:focus,input[type="password"].focus,input[type="password"]:focus,input[type="email"].focus,input[type="email"]:focus,input[type="number"].focus,input[type="number"]:focus,input[type="tel"].focus,input[type="tel"]:focus,input[type="url"].focus,input[type="url"]:focus,textarea.focus,textarea:focus {
+//     border-color: #51a7e8;
+//     box-shadow: inset 0 1px 2px rgba(0,0,0,0.075),0 0 5px rgba(81,167,232,0.5)
+// }
 
 input.input-contrast,.input-contrast {
     background-color: #fafafa
